[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/interface/splashes/splash_team.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/splashes/splash_ld46.png" type="Texture" id=2]
[ext_resource path="res://src/interfaces/SplashScreen.gd" type="Script" id=3]
[ext_resource path="res://scenes/interface/TransitionEffect.tscn" type="PackedScene" id=4]

[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamSplash" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LudumSplash" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TransitionEffect" parent="." instance=ExtResource( 4 )]

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true
[connection signal="on_screen_opened" from="TransitionEffect" to="." method="_on_TransitionEffect_on_screen_opened"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
